# jyablonski.github.io

./: .bumpversion.cfg  .gitignore  Makefile  Pipfile  README.md  application.py  pyproject.toml  requirements.txt  server.py  website_notes.md
.github/workflows/: ci_cd.yaml  deploy.yml
data/: projects.json
docs/: index.html
docs/about/: index.html
docs/example-text/: index.html
docs/example-text2/: index.html
docs/kafka-notes/: index.html
docs/mlflow-notes/: index.html
docs/new_secret_sample/: index.html
docs/personal_project/: index.html
docs/posts/: index.html
docs/posts/first/: index.html
docs/posts/personal/: index.html
docs/posts/sample/: index.html
docs/posts/test/: index.html
docs/projects/: index.html
docs/resume/: index.html
docs/spark-notes/: index.html
docs/static/css/: style.css
docs/static/js/: webfont.js
docs/test/: index.html
pages/: about.md  example-text.md  example-text2.md  kafka-notes.md  mlflow-notes.md  new_secret_sample.md  notes.md  personal_project.md  spark-notes.md  test.md
static/css/: style.css
static/js/: snap.svg-min.js  squence-diagram-min.js
templates/: 404.html  about.html  base.html  index.html  posts.html  projects.html  resume.html
tests/: conftest.py  test_build.py  test_routes.py
