[tool.poetry]
name = "jyablonski-github-io"
version = "0.4.0"
description = "jyablonski Website"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.3"
flask-flatpages = "^0.8.2"
frozen-flask = "^1.0.1"
flask-markdown = "^0.3"



[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.13"
ipykernel = "^6.28.0"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"